--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 
 {% include career-profile.html %}
-
+{% include research-topics.html%}
 {% unless site.data.data.sidebar.education %}
   {% include education.html %}
 {% endunless %}
