--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 ---
 
+
+Venez assister à la présentation des travaux en cours de mes doctorants
+lors du séminaire annuel le 8 juin (disponible ne ligne). Toutes les infos sont <a href="https://www.linkedin.com/posts/activity-7061965584875319296-AQVv?utm_source=share&utm_medium=member_desktop">ici</a>
 <h2 class="section-title"> Content :</h2>
 - <a href="#Position">Position and responsabilities</a><br />
 - <a href="#Current">Current students</a><br />
