--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ layout: default
 <br>
 <br>
 <h2 class="section-title"> Content :</h2>
-- <a href="#Position">Position and responsabilities</a><br />
+- <a href="#Position">Actual position and responsabilities</a><br />
 - <a href="#Current">Current students</a><br />
-- <a href="#Available">Available positions</a><br />
+- <a href="#Available">Available positions (Funded PhD, Postdoc, internship)</a><br />
 - <a href="#introduction">Publications</a><br />
 <br>
 <br>
